--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,12 +3,24 @@
 {% block content %}
     <h1>home template</h1>
     <div>
+        <a href={% url 'create-room' %}>
+            create room
+        </a>
+        <a href="">delete</a>
         {% for room in rooms %}
             <div>
+                <span>
+                    @{{room.host.username}}
+                </span>
                 <a href="{% url 'room' room.id %}">
                     <h5>
                         {{room.id}} -- {{room.name}}
                     </h5>
+                    <small>{{room.topic}}</small>
+                    <hr>
+                </a>
+                <a href="{% url "update-room" room.id %}">
+                    edit
                 </a>
             </div>
         {% endfor %}
